# isaac-sim-ur5e

./: .env.approach-b  .env.python311  .gitignore  .gitmodules  APPROACH_B_COMMANDS.md  APPROACH_B_DEVELOPMENT_GUIDE.md  APPROACH_B_IMPLEMENTATION_PLAN.md  CLAUDE.md  README.md  SETUP.md  requirements.txt
.devcontainer/: devcontainer.json  devcontainer.json.backup
colcon_ws/src/core/: package.xml  setup.py
colcon_ws/src/core/launch/: bring_up.launch.py  isaac_sim_gui.launch.py
colcon_ws/src/core/scripts/: isaac_sim_gui.sh
colcon_ws/src/core/src/: __init__.py  main.py
colcon_ws/src/core/src/communication/: node.py
colcon_ws/src/core/src/spawning/: ur5e.py
colcon_ws/src/dynamics/: README.md  conftest.py  package.xml  pytest.ini  setup.py
colcon_ws/src/dynamics/src/: __init__.py  forward_kinematics.py  isaac_sim_interface.py  isaac_verification_node.py  lie_algebra.py  lie_algebra_native.py  newton_euler.py  newton_euler_classic.py  newton_euler_joint_frame.py  newton_euler_native.py  offline_verification.py  spatial_inertia.py  ur5e_parameters.py  verification_node.py
colcon_ws/src/dynamics/test/: __init__.py  conftest.py  debug_com_chain.py  test_adjoint_direction.py  test_com_velocity.py  test_implementation_comparison.py  test_joint_frame_ne.py  test_lie_algebra.py  test_newton_euler.py  test_pinocchio_comparison.py  test_spatial_inertia.py  test_torque_verification.py
colcon_ws/src/iparam_identification/: package.xml  setup.py
colcon_ws/src/iparam_identification/notes/: implementation_log.md  implementation_plan.md  references.md
colcon_ws/src/iparam_identification/scripts/: run_identification_test.py  run_test.sh
colcon_ws/src/iparam_identification/src/: __init__.py
colcon_ws/src/iparam_identification/src/estimation/: __init__.py  base_estimator.py  batch_ls.py  batch_tls.py  rls.py  rtls.py  svd_update.py
colcon_ws/src/iparam_identification/src/sensor/: __init__.py  contact_sensor.py  data_buffer.py  data_types.py
colcon_ws/src/iparam_identification/src/trajectory/: __init__.py
colcon_ws/src/iparam_identification/test/: __init__.py  conftest.py  test_estimation.py  test_sensor.py
colcon_ws/src/isaacsim_core/: package.xml  setup.cfg  setup.py
colcon_ws/src/isaacsim_teleop/: package.xml  setup.cfg  setup.py
colcon_ws/src/isaacsim_trajectory/: package.xml  setup.py
colcon_ws/src/kinematics/: README.md  package.xml  pytest.ini  setup.py
colcon_ws/src/kinematics_legacy/: README.md  package.xml  setup.py
colcon_ws/src/trajectories/: package.xml  setup.cfg  setup.py
colcon_ws/src/trajectories/launch/: joint_pos_sender.launch.py
colcon_ws/src/trajectories/src/: __init__.py  base_trajectory.py  follower_node.py  fourier.py  generator_cli.py  spline.py  windowed_fourier_spline.py
colcon_ws/src/trajectory/: README.md  package.xml  setup.py
colcon_ws/src/trajectory/src/: __init__.py  generator_cli.py  window.py  windowed_fourier.py
data/: shared
docker/: .bashrc  .profile  Dockerfile  Dockerfile.approach-b  Dockerfile.python311  docker-compose.approach-b.yml  docker-compose.python311.yml  docker-compose.yml  entrypoint.sh
docker/scripts/: init_workspaces.sh  rebuild_underlay.sh
docs/: APPROACH_B_MIGRATION_GUIDE.md  APPROACH_B_SAFE_SETUP.md  QUICKSTART_APPROACH_B.md
docs/design/: python311_approach_b_action_plan.md  python311_unification_design.md
launch/: ur5e_control.launch.py
notes/: ur5e_kinematics_implementation_plan.md
scripts/: check_usd_structure.py  list_grippers.py  ros2_control.py  run_isaac_ros2.sh  run_ros2.sh  simple_control.py  target_publisher.py  test_ur5e.py
src/: __init__.py  env_loader.py
(+68 files in other folders)
