<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_model_v3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectories</name>
  <version>0.2.0</version>
  <description>Unified trajectory generation and playback package for Isaac Sim</description>
  <maintainer email="franche1984@gmail.com">root</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
